# pdfmixtool

./: .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  TRANSLATORS.md
languages/: pdfmixtool_ca.ts  pdfmixtool_cs.ts  pdfmixtool_de.ts  pdfmixtool_en.ts  pdfmixtool_es.ts  pdfmixtool_fr.ts  pdfmixtool_he.ts  pdfmixtool_hr.ts  pdfmixtool_hu.ts  pdfmixtool_id.ts  pdfmixtool_it.ts  pdfmixtool_ja.ts  pdfmixtool_nb_NO.ts  pdfmixtool_nl.ts  pdfmixtool_pl.ts  pdfmixtool_pt.ts  pdfmixtool_pt_BR.ts  pdfmixtool_ro.ts  pdfmixtool_ru.ts  pdfmixtool_si.ts  pdfmixtool_sv.ts  pdfmixtool_tr.ts  pdfmixtool_zh_Hans.ts
resources/: eu.scarpetta.PDFMixTool.appdata.xml  eu.scarpetta.PDFMixTool.desktop  eu.scarpetta.PDFMixTool.flatpak.desktop  pdfmixtool_en.ts  pdfmixtool_model_en.ts  resources.qrc
src/: aboutdialog.cpp  aboutdialog.h  editmultipageprofiledialog.cpp  editmultipageprofiledialog.h  editpdfentrydialog.cpp  editpdfentrydialog.h  gui_utils.cpp  gui_utils.h  inputpdffiledelegate.cpp  inputpdffiledelegate.h  inputpdffilewidget.cpp  inputpdffilewidget.h  libraries.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mouseeventfilter.cpp  mouseeventfilter.h  multipageprofilesmanager.cpp  multipageprofilesmanager.h  pdfinfolabel.cpp  pdfinfolabel.h  qpdf_version.h.in
src/operations/: abstract_operation.cpp  abstract_operation.h  add_empty_pages.cpp  add_empty_pages.h  alternate_mix.cpp  alternate_mix.h  booklet.cpp  booklet.h  delete_pages.cpp  delete_pages.h  edit_document_info.cpp  edit_document_info.h  edit_page_layout.cpp  edit_page_layout.h  extract_images.cpp  extract_images.h  extract_pages.cpp  extract_pages.h  merge.cpp  merge.h  rotate.cpp  rotate.h
src/pdf_edit_lib/: definitions.cpp  definitions.h  pdf_editor.cpp  pdf_editor.h  pdf_info.cpp  pdf_info.h  pdf_writer.cpp  pdf_writer.h  podofo_pdffile.cpp  qpdf_version.h.in
src/single_file_operations/: abstract_operation.cpp  abstract_operation.h  add_empty_pages.cpp  add_empty_pages.h  booklet.cpp  booklet.h  delete_pages.cpp  delete_pages.h  edit_page_layout.cpp  edit_page_layout.h  extract_pages.cpp  extract_pages.h  rotation_multipage.cpp  rotation_multipage.h
src/widgets/: multipage_editor.cpp  multipage_editor.h  operation_item_delegate.cpp  operation_item_delegate.h  output_preview.cpp  output_preview.h  pages_selector.cpp  pages_selector.h  pdfinfolabel.cpp  pdfinfolabel.h
